# discord-dualsense-mac-mute-rs

./: Cargo.toml  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  useLiveStatus.ts
macos/: .gitignore  AppIcon.icns  Package.swift  build-app.sh  make-icon.swift
macos/Sources/DiscordMute/: AppModel.swift  DiscordMuteApp.swift  Notifier.swift  PanelView.swift  ServerProcess.swift  SettingsView.swift  StatusClient.swift
src/: api.rs  auth.rs  config.rs  controller.rs  daemon.rs  discord_ipc.rs  discord_mute.rs  keyboard.rs  main.rs  notify.rs  token.rs
static/: index.html
static/assets/: index-BOorcgR8.css  index-Dav9SG_v.js  index-DuUYkWPC.js
