[package]
name = "discord-mute-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1"
hidapi = { version = "2", features = ["macos-shared-device"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
actix-files = "0.6"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "macros"] }
